[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'date_hour'
version = '1.0.0'
description = ''
authors = [
    { name = 'Садовский М.К.', email = 'i@maxim-sadovskiy.ru' }
]
license = { text = 'Apache-2.0' }
readme = 'README.md'
requires-python = '>=3.8'
dependencies = [
    'pydantic>=2.5.0',
]

[project.urls]
Homepage = 'https://github.com/Sam-Strand/date_hour'